--- a/TODO
+++ b/TODO
@@ -1,3 +1,2 @@
-U¿yæ mechanizmu gettex do t³umaczenia.
-Wprowadziæ wiêcej stopni gadatliwo¶ci programu.
-Poprawiæ komunikaty angielskie.
+Umo¿liwiæ numerowanie wed³ug kolejno¶ci pojawiania siê etykiet w tek¶cie
+Co z portem na windows?
