--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 Umo¿liwiæ numerowanie wed³ug kolejno¶ci pojawiania siê etykiet w tek¶cie
 Co z portem na windows?
+umo¿liwiæ numerowanie z przedrostkiem dla numeru rozdzia³u, na przyk³ad 1:1, 1:2 jak latexowe numery rysunków i tabel
